parser/tests/bad/expr04.st
% operand of 'comparison' operation must have type 'int', 'real', or 'string'

const b: bool := 0 < true
